--- a/CODEMETA.yaml
+++ b/CODEMETA.yaml
@@ -29,7 +29,7 @@
 
 ---
 categories:
-  # - ai-ml
+  - ai-ml
   # - performance-and-workflow
   - scientific-software
   # - simulation
@@ -128,8 +128,8 @@ themes:
   #     - Precision medicine
   #     - Regenerative medicine
   #
-  # - Information Technology
-  #     - Artificial intelligence
+  - Information Technology
+      - Artificial intelligence
   #     - Biometrics
   #     - Cloud computing and virtualization
   #     - Complex systems
@@ -142,7 +142,7 @@ themes:
   #         - Cryptography
   #         - Cybersecurity Education and Workforce Development
   #         - Risk management
-  #     - Data and informatics
+      - Data and informatics
   #         - Human language technology
   #         - Information retrieval
   #         - Natural language processing
@@ -202,18 +202,18 @@ themes:
   #     - Systems integration
   #     - Technology commercialization
   #
-  # - Materials
+  - Materials
   #     - Ceramics
   #     - Composites
   #     - Concrete and cement
-  #     - Materials characterization
-  #         - Composition and structure
+      - Materials characterization
+          - Composition and structure
   #         - Magnetic properties
   #         - Mechanical properties
-  #         - Thermal properties
+          - Thermal properties
   #     - Metals
   #     - Modeling and computational material science
-  #     - Polymers
+      - Polymers
   #     - Superconductors
   #
   # - Mathematics and Statistics
